Modified build_skeleton.pl to take care of nested '(' in the string quote. Modified copyright notice to mention Adaview in stead of 'this program.'

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -5,8 +5,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: adaview\n"
 "Report-Msgid-Bugs-To: zhu.qunying@gmail.com\n"
-"POT-Creation-Date: 2014-04-12 00:06-0700\n"
-"PO-Revision-Date: 2014-04-12 00:05-0700\n"
+"POT-Creation-Date: 2014-04-16 17:47-0700\n"
+"PO-Revision-Date: 2014-04-16 17:47-0700\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: \n"
@@ -19,8 +19,33 @@ msgid "A PostScript/PDF viewer."
 msgstr "PostScript/PDF 浏览器"
 
 #: adaview-version.adb
+msgid ""
+"Adaview is free software; you can redistribute it and/or modify\n"
+"it under the terms of the GNU General Public License as published by\n"
+"the Free Software Foundation; either version 3 of the License, or\n"
+"(at your option) any later version.\n"
+"\n"
+"Adaview is distributed in the hope that it will be useful,\n"
+"but WITHOUT ANY WARRANTY; without even the implied warranty of\n"
+"MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the\n"
+"GNU General Public License for more details.\n"
+"\n"
+"You should have received a copy of the GNU General Public License\n"
+"along with this program; if not, see <http://www.gnu.org/licenses/>.\n"
+msgstr ""
+"Adaview 为自由软件; 您可依据自由软件基金会 (Free Software Foundation)\n"
+"所发表的GNU通用公共授权条款(GNU General Public License)第三版或\n"
+"您自行选择的任一后续版本, 就本程序再为发布与修改。\n"
+"\n"
+"发表 Adaview 的目的是希望它有用, 但没有任何担保责任; 亦无适售性或\n"
+"适合特定目的而隐含的担保。详情请参照GNU通用公共授权。\n"
+"\n"
+"您应已收到附随于本程序的GNU通用公共授权的副本; 如果没有, 请看\n"
+"<http://www.gnu.org/licenses/>。\n"
+
+#: adaview-version.adb
 msgid "Copyright (C) 2014 Zhu Qun-Ying"
-msgstr "著作权所有 (C) 2014 朱群英"
+msgstr "著作版权所有 (C) 2014 朱群英"
 
 #: adaview-config.adb
 msgid "Display version information"
@@ -29,7 +54,3 @@ msgstr "显示版本信息"
 #: adaview-config.adb
 msgid "Error: "
 msgstr "错误: "
-
-#: adaview-config.adb
-msgid "This program is free software released under the GPLv3 or latter."
-msgstr "本程序是自由软件, 基于 GPLv3 或以后版本发布。"
