--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -1,12 +1,12 @@
 # Translation file for adaview
-# Copyright (C) 2014 Zhu Qun-Ying
+# Copyright (C) 2014-2015 Zhu Qun-Ying
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: adaview\n"
 "Report-Msgid-Bugs-To: zhu.qunying@gmail.com\n"
-"POT-Creation-Date: 2014-12-23 17:59-0800\n"
-"PO-Revision-Date: 2014-12-23 19:28-0800\n"
+"POT-Creation-Date: 2015-01-17 07:38-0800\n"
+"PO-Revision-Date: 2015-01-17 07:39-0800\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: \n"
@@ -66,3 +66,7 @@ msgstr ""
 "\n"
 "您应已收到附随于本程序的GNU通用公共授权的副本; 如果没有, 请看\n"
 "<http://www.gnu.org/licenses/>。\n"
+
+#: string_format.adb
+msgid "Format string has %1, larger than maximum index %2 of Elements."
+msgstr "格式字符串中下标 %1 超出 Elements 最大下标 %2。"
