--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -5,18 +5,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: adaview\n"
 "Report-Msgid-Bugs-To: zhu.qunying@gmail.com\n"
-"POT-Creation-Date: 2015-01-17 08:00-0800\n"
-"PO-Revision-Date: 2015-01-17 08:01-0800\n"
+"POT-Creation-Date: 2015-09-23 16:05-0700\n"
+"PO-Revision-Date: 2015-09-23 16:09-0700\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-
-#: adaview-config.adb
-msgid "Usage: adaview [OPTIONS...] [file [page]]"
-msgstr "用法: adaview [选项] [文件 [页数]]"
 
 #: adaview-config.adb
 msgid "Show version information"
@@ -31,8 +27,20 @@ msgid "Show all help options"
 msgstr "显示全部的帮助信息"
 
 #: adaview-config.adb
+msgid "Set debug level (0 ~ 8)"
+msgstr "设置调试级别 (0 ~ 8)"
+
+#: adaview-config.adb
 msgid "Error: "
 msgstr "错误: "
+
+#: adaview-config.adb
+msgid "Error: debug level could only be 0 ~ 8."
+msgstr "错误: 调试级别只能是 0 ~ 8."
+
+#: adaview-config.adb
+msgid "Usage: adaview [OPTIONS...] [file [page]]"
+msgstr "用法: adaview [选项] [文件 [页数]]"
 
 #: adaview-version.adb
 msgid "A PostScript/PDF viewer."
